--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
-.row{
-  text-align:center;
-  
+h1 { 
+    text-align: center;
 }
-#choices{
-  display:flex;
-  justify-content:space-between;
-  
+
+.inputBoxes {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+input
+{
+    font-size:24px;
+    height:50px;
+    width:50px;
+    text-align:center;
+}
+
+.buttons
+{
+    display: flex;
+    justify-content: center;
 }
