--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,13 @@ input
     display: flex;
     justify-content: center;
 }
+
+.row{
+  text-align:center;
+  
+}
+#choices{
+  display:flex;
+  justify-content:space-between;
+  
+}
